# safepal-app

./: .gitattributes  .gitignore  README.md  mo.sh  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: crypto_utils.c  crypto_utils.h  native-lib.cpp
android/app/src/main/cpp/core/crypto/: address.h  base32.h  base58.h  base58_xrp.c  bignum.c  bignum.h  bip32.c  bip39.h  blake256.c  blake256.h  blake2b.c  cash_addr.h  ecdsa.h  groestl.h  hasher.c  hasher.h  hmac.c  hmac.h  hmac_drbg.c  memzero.h  nem.c  nem.h  nist256p1.h  options.h  rand.c  rc4.h  ripemd160.c  ripemd160.h  script.h  setup.py  sha2.h  sha3.c
android/app/src/main/cpp/core/crypto/ed25519-donna/: ed25519-donna.h
android/app/src/main/cpp/core/crypto/sr25519/: README.md
android/app/src/main/cpp/core/crypto/sr25519/src/: int128.c  int128.h  merlin.c  sr25519.h  types.h
android/app/src/main/cpp/core/crypto/sr25519/strobe-code/: strobe.c  strobe.h  strobe_config.h  x25519.c
android/app/src/main/cpp/core/include/utils/: base64.h  common_core.h  crc16.h  cstr.h  defines.h  secure_util.h
android/app/src/main/cpp/core/include/wallet/: qr_pack.h  wallet_proto_qr.h
android/app/src/main/cpp/core/pbc/: pbc.h  pbc.sln  pbc.vcxproj
android/app/src/main/cpp/core/pbc/binding/lua/: protobuf.lua
android/app/src/main/cpp/core/pbc/src/: proto.c  rmessage.c
android/app/src/main/cpp/core/utils/: base64.c  crc16.c  debug.c  protobuf_util.c
android/app/src/main/cpp/core/wallet/: qr_pack.c
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/java/io/fluttertoast/: FluttertoastPlugin.java
android/app/src/main/java/io/safepal/example/: ClearUtil.java  CommonUtils.java  CryptoPluginHandler.java  CustomDialog.java  ExampleActivity.java  HDNode.java  JNICryptoUtils.java  JNIResp.java  UtilPluginHandler.java  WalletMainApplication.java
android/app/src/main/java/io/safepal/scan/: CameraManager.java  DialogBuilder.java  IActivityLifiCycle.java  OnFirstPreDraw.java  ScanActivity.java  ScanViewModel.java  ScannerView.java  SensorControler.java  SingleLiveEvent.java
android/app/src/main/res/drawable/: dialog_bg.xml  ios_dialog_shape.xml  launch_background.xml
android/app/src/main/res/layout/: dialog_native.xml  ios_dialog.xml  layout_progress.xml  scan_activity.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/json/: blockchain.json
ios/: Podfile
ios/Runner/: AppDelegate.h  AppDelegate.m  AppTheme.h  AppTheme.m  FlutterSecureStoragePlugin.m  GeneratedPluginRegistrant.m  Info.plist  SFPBasePlugin.h  SFPBasePlugin.m  SFPBasePluginItem.h  SFPBasePluginItem.m  SFPCryptoPlugin.h  SFPCryptoPlugin.m  SFPFlutterBaseViewController.h  SFPFlutterBaseViewController.m  SFPFlutterChannelResp.h  SFPFlutterChannelResp.m  SFPProgressHUDPlugin.h  SFPProgressHUDPlugin.m  SFPQRPlugin.h  SFPQRPlugin.m  SFPUtilsPlugin.h  SFPUtilsPlugin.m  SecureRandomUtil.h  SecureRandomUtil.m
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: Main.storyboard
ios/Runner/BaseViewController/: SFPBaseNavigationController.h  SFPBaseNavigationController.m
ios/Runner/FlutterToast/: FluttertoastPlugin.m
ios/Runner/QRCodeViewCtrl/: SFPQRCodeGenerateManager.h  SFPQRCodeGenerateManager.m  SFPQRCodeScanConfig.h  SFPQRCodeScanConfig.m  SFPQRCodeScanView.h  SFPQRCodeScanView.m  SFPQRCodeScanningVC+SFPAdd.h  SFPQRCodeScanningVC+SFPAdd.m  SFPQRCodeScanningVC.h  SFPQRCodeScanningVC.m  SFPQRCodeSession.h  SFPQRCodeSession.m
ios/Runner/Utils/: SFPBaseModel.h  SFPBaseModel.m  SFPColor.h  SFPColor.m  SFPCommonUtils.h  SFPCommonUtils.m  SFPCryptoUtil.h  SFPCryptoUtil.m  SFPEIP55.h  SFPEIP55.m  SFPFont.h  SFPFont.m  SFPHelper.h  SFPHelper.m  SFPMacro.h  SFPPubHDNode.h  SFPPubHDNode.m
ios/Runner/core/crypto/sr25519/: CMakeLists.txt  Dockerfile
ios/Runner/core/crypto/sr25519/src/: consts.h  merlin.h  sr25519.c
ios/Runner/core/crypto/sr25519/strobe-code/: README.md
ios/Runner/core/crypto/sr25519/test/: test.c
ios/Runner/en.lproj/: InfoPlist.strings  Localizable.strings
lib/: main.dart  main_test.dart  themeProvider.dart
lib/coins/: base_address.dart  chain_config.dart  chain_config.g.dart  coin.dart  coin.g.dart  coin_base_info.dart  coin_base_info.g.dart  hd_derived_path.dart  hd_magic_version.dart  hd_node.dart  hd_node.g.dart  hd_purpose_util.dart
lib/coins/bitcoin/: bitcoin_address.dart  bitcoin_api.dart  bitcoin_tx_builder.dart  bitcoin_unspend.dart  bitcoin_unspend.g.dart  bitcoin_utxo_selector.dart  extended_public_key.dart  native_segwit_address.dart
lib/coins/ethereum/: ethereum_address.dart  ethereum_api.dart
lib/manager/: managers.dart  network_manager.dart  transfer_history_manager.dart  wallet_manager.dart
lib/model/: models.dart  send_out_item.dart  transfer_history.dart  wallet.dart  wallet.g.dart
lib/pages/: add_wallet_page.dart  main_wallet_page.dart  pair_device_page.dart  receive_address_widget.dart  root_page.dart  show_qr_code_page.dart  sign_message_page.dart  transfer_page.dart
lib/protobuf/: Wallet.pb.dart  Wallet.pbenum.dart  Wallet.pbjson.dart  Wallet.pbserver.dart
lib/protobuf/wallet/: Wallet.proto
lib/transport/: qr_channel_transport.dart  transport_util.dart
lib/utils/: api_util.dart  app_util.dart  base_plugin.dart  coin_utils.dart  crypto_plugin.dart  debug_logger.dart  decimal_util.dart  hud_progress_plugin.dart  lang.dart  qr_plugin.dart  string_utils.dart  style.dart  time.dart  toast_util.dart  utils_plugin.dart
lib/widgets/: alert_dialog.dart  base_app_bar.dart  card_widget.dart  flat_widget.dart  fluttertoast.dart  modal_progress_hud.dart  qr_image_widget.dart
lib/widgets/qr/: byte.dart  qr.dart  qr_code.dart  util.dart
lib/widgets/qr_image/: qr_flutter.dart  qr_image.dart  qr_painter.dart
lib/widgets/rflutter_alert/: rflutter_alert.dart
(+44 files in other folders)
